[metadata]
name = asynclxd
version = 0.0.1
license = LGPLv3+
description = Asynchronous client library for LXD REST API
long_description = file: README.rst
author = Alberto Donato
author_email = alberto.donato@gmail.com
maintainer = Alberto Donato
maintainer_email = alberto.donato@gmail.com
url = https://github.com/albertodonato/asynclxd
keywords = asyncio LXD REST API
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.6
install_requires =
    aiohttp >=3.1.0
    attr
    iso8601
    pyxdg
    PyYAML
    toolrack

packages = find:
include_package_data = True

[options.packages.find]
include =
    asynclxd
    asynclxd.*

[options.extras_require]
testing =
    pytest
    pytest-asyncio
    pytest-mock

[options.entry_points]
console_scripts =

[globals]
lint_files = setup.py asynclxd

[coverage:run]
source = asynclxd
omit =

[coverage:report]
show_missing = True
fail_under = 100.0
skip_covered = True

[flake8]
max-line-length = 80
select = C, E, F, W, B, B950
ignore = E203, E501, W503

[mypy]
incremental = False
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True

[tox]
skipsdist = True

[testenv]
deps =
    .
    .[testing]
commands =
    {envbindir}/pytest {posargs}

[testenv:format]
deps =
    black
    isort
commands =
    {envbindir}/isort --recursive {[globals]lint_files}
    {envbindir}/black -q {[globals]lint_files}

[testenv:lint]
deps =
    black
    flake8
    isort
commands =
    {envbindir}/isort --check-only --diff --recursive {[globals]lint_files}
    {envbindir}/black --check {[globals]lint_files}
    {envbindir}/flake8 {[globals]lint_files}

[testenv:check]
deps =
    mypy
commands =
    {envbindir}/mypy -p asynclxd {posargs}

[testenv:coverage]
deps =
    .
    .[testing]
    pytest-cov
commands =
    {envbindir}/pytest --cov {posargs}

[testenv:docs]
deps =
    .
    sphinx
    sphinx-autodoc-typehints
commands =
    sphinx-build -b html docs html {posargs}

